--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,5 +15,14 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:padding="@dimen/grid_spacing_half" />
+
+    <com.google.android.cameraview.CameraView
+        android:id="@+id/peepz_secret_camera"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:keepScreenOn="true"
+        app:autoFocus="true"
+        app:facing="front"
+        app:flash="off" />
 
 </LinearLayout>
