--- a/android/mobile/src/main/res/menu/peepz.xml
+++ b/android/mobile/src/main/res/menu/peepz.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/peepz_menu_take_picture"
-        android:title="@string/peepz_menu_take_picture" />
+        android:title="@string/peepz_menu_take_picture"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/peepz_menu_debug_secret_picture"
+        android:title="secretPicture"
+        app:showAsAction="always" />
 
 </menu>
