--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <com.novoda.peepz.PeepzToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/peepz_collection"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:padding="@dimen/grid_spacing_half" />
+        android:layout_height="match_parent">
 
-    <com.google.android.cameraview.CameraView
-        android:id="@+id/peepz_secret_camera"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
-        android:keepScreenOn="true"
-        app:autoFocus="true"
-        app:facing="front"
-        app:flash="off" />
+        <com.novoda.peepz.PeepzCameraView
+            android:id="@+id/peepz_secret_camera"
+            android:layout_width="1dp"
+            android:layout_height="1dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/peepz_collection"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:padding="@dimen/grid_spacing_half" />
+
+    </FrameLayout>
 
 </LinearLayout>
