--- a/android/mobile/src/main/res/layout/merge_selfie_live.xml
+++ b/android/mobile/src/main/res/layout/merge_selfie_live.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.google.android.cameraview.CameraView
+    <com.novoda.peepz.PeepzCameraView
         android:id="@+id/selfie_live_camera"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:keepScreenOn="true"
-        app:autoFocus="true"
-        app:facing="front"
-        app:flash="off" />
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/selfie_live_button_take_picture"
