--- a/android/mobile/src/main/res/values/dimens.xml
+++ b/android/mobile/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="size_peek">44dp</dimen>
     <dimen name="grid_spacing">8dp</dimen>
     <dimen name="grid_spacing_half">8dp</dimen>
+    <dimen name="sign_in_button_min_width">220dp</dimen>
+    <dimen name="sign_in_button_min_height">48dp</dimen>
+    <dimen name="sign_in_button_margin_top">16dp</dimen>
+    <dimen name="sign_in_button_text">16sp</dimen>
+
 </resources>
