--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -11,4 +11,18 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="Peepz.SignIn" />
+
+    <style name="Peepz.SignIn.Button">
+        <item name="android:background">@drawable/sign_in_button_background</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingLeft">32dp</item>
+        <item name="android:paddingRight">32dp</item>
+        <item name="android:paddingBottom">24dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textFont">montserratRegular</item>
+    </style>
+
 </resources>
