--- a/android/mobile/src/main/res/layout/merge_peep.xml
+++ b/android/mobile/src/main/res/layout/merge_peep.xml
@@ -11,6 +11,7 @@
         android:id="@+id/peep_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         android:scaleType="centerCrop"
         tools:src="@drawable/debug_peep_photo" />
 
