--- a/android/mobile/src/main/res/values/color-palette.xml
+++ b/android/mobile/src/main/res/values/color-palette.xml
@@ -4,6 +4,7 @@
     <color name="transparent">#00000000</color>
     <color name="black_25">#40000000</color>
     <color name="black_75">#BF000000</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="purple_left">#72218A</color>
     <color name="purple_right">#391885</color>
