--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -37,4 +37,14 @@
 
     </FrameLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/peepz_button_take_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="16dp"
+        android:src="@drawable/peepz_button_take_picture"
+        android:visibility="gone"
+        app:fabSize="normal" />
+
 </android.support.design.widget.CoordinatorLayout>
