--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -39,6 +39,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/peepz_button_take_picture"
+        android:theme="@style/Peepz.Fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
