--- a/android/mobile/src/main/res/values/dimens.xml
+++ b/android/mobile/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="size_peek">44dp</dimen>
     <dimen name="grid_spacing">4dp</dimen>
+    <dimen name="grid_item_radius">2dp</dimen>
 
     <dimen name="sign_in_button_width">253dp</dimen>
     <dimen name="sign_in_button_height">96dp</dimen>
