--- a/android/mobile/src/main/res/values/color-palette.xml
+++ b/android/mobile/src/main/res/values/color-palette.xml
@@ -8,6 +8,7 @@
     <color name="white">#FFFFFF</color>
     <color name="purple_left">#72218A</color>
     <color name="purple_right">#391885</color>
-    <color name="purple_text">#3A1885</color>
+    <color name="purple_accent">#3A1885</color>
+    <color name="purple_text">@color/purple_accent</color>
 
 </resources>
