--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -10,13 +10,19 @@
 
     <style name="Peepz.Fab" parent="ThemeOverlay.AppCompat">
         <item name="colorAccent">@color/white</item>
+        <item name="colorControlHighlight">@color/purple_accent</item>
+    </style>
+
+    <style name="Selfie.Fab" parent="ThemeOverlay.AppCompat">
+        <item name="colorAccent">@color/purple_accent</item>
+        <item name="colorControlHighlight">@color/white</item>
     </style>
 
     <!--AppCompat's Toolbar ignores any `android:` attrs that are related to the action bar, on any API level-->
     <style name="Peepz.Toolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:id">@id/toolbar</item> <!-- this should be forced in the class? -->
         <item name="android:background">@android:color/transparent</item>
-        <item name="logo">@drawable/peepz_appbar_icon</item>
+        <item name="logo">@drawable/img_appbar_logo</item>
         <item name="logoDescription">@string/app_name</item>
         <item name="contentInsetStart">24dp</item>
     </style>
