Add circle action button instead of fab
- so we can specify a shape drawable as background

--- a/android/mobile/src/main/res/layout/merge_selfie_live.xml
+++ b/android/mobile/src/main/res/layout/merge_selfie_live.xml
@@ -6,13 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.novoda.support.CircleActionButton
         android:id="@+id/selfie_live_button_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_camera_white"
-        android:theme="@style/Selfie.Fab" />
+        android:src="@drawable/ic_camera_white" />
 
 </merge>
