--- a/android/mobile/src/main/res/values/attrs.xml
+++ b/android/mobile/src/main/res/values/attrs.xml
@@ -3,4 +3,14 @@
 
     <attr name="peepzToolbarDefStyle" format="reference" />
 
+    <attr name="peepzCircleActionButtonDefStyle" format="reference" />
+
+    <declare-styleable name="CircleActionButton">
+
+        <attr name="android:src" />
+
+        <attr name="android:background" />
+
+    </declare-styleable>
+
 </resources>
