Add press and focus state for sign in button

--- a/android/mobile/src/main/res/layout/activity_sign_in.xml
+++ b/android/mobile/src/main/res/layout/activity_sign_in.xml
@@ -19,6 +19,7 @@
         style="@style/Peepz.SignIn.Button"
         android:layout_width="@dimen/sign_in_button_width"
         android:layout_height="@dimen/sign_in_button_height"
+        android:focusable="true"
         android:gravity="center"
         android:text="@string/sign_in_button" />
 
