--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -37,6 +37,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:paddingLeft">32dp</item>
+        <item name="android:paddingTop">20dp</item>
         <item name="android:paddingRight">32dp</item>
         <item name="android:paddingBottom">24dp</item>
         <item name="android:textSize">16sp</item>
