--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -32,6 +32,12 @@
 
     <style name="Peepz.SignIn" />
 
+    <style name="Peepz.SignIn.Tagline">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/purple_text</item>
+        <item name="textFont">montserratRegular</item>
+    </style>
+
     <style name="Peepz.SignIn.Button">
         <item name="android:background">@drawable/sign_in_button_background</item>
         <item name="android:ellipsize">end</item>
@@ -42,6 +48,12 @@
         <item name="android:paddingBottom">24dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="textFont">montserratRegular</item>
+    </style>
+
+    <style name="Peepz.SignIn.Footer">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/gray_text</item>
         <item name="textFont">montserratRegular</item>
     </style>
 
