--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -37,14 +37,13 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.novoda.support.FloatingActionButton
         android:id="@+id/peepz_button_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
         android:src="@drawable/ic_camera_purple"
-        android:theme="@style/Peepz.Fab"
         android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
