--- a/android/mobile/src/main/res/layout/merge_selfie_live.xml
+++ b/android/mobile/src/main/res/layout/merge_selfie_live.xml
@@ -6,12 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.novoda.support.CircleActionButton
+    <com.novoda.support.FloatingActionButton
         android:id="@+id/selfie_live_button_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
+        android:background="@drawable/selfie_live_fab_background"
         android:src="@drawable/ic_camera_white" />
 
 </merge>
