Add padding to bottom of peepz recyclerview to accommodate for fab
- if the appbar menu is used instead of fab (talkback/keyboard), there'll be an odd amount of space at the bottom :s

--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -33,7 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:padding="@dimen/grid_spacing" />
+            android:paddingLeft="@dimen/grid_spacing"
+            android:paddingTop="@dimen/grid_spacing"
+            android:paddingRight="@dimen/grid_spacing"
+            android:paddingBottom="104dp" />
 
     </FrameLayout>
 
