--- a/android/mobile/src/main/res/layout/merge_peep.xml
+++ b/android/mobile/src/main/res/layout/merge_peep.xml
@@ -15,20 +15,45 @@
         android:scaleType="centerCrop"
         tools:src="@drawable/debug_peep_photo" />
 
-    <com.novoda.support.FontTextView
-        android:id="@+id/peep_text_name"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@drawable/peep_name_background"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:paddingBottom="4dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
-        android:paddingTop="38dp"
-        android:textColor="@color/white"
-        app:textFont="montserratRegular"
-        tools:text="Master O" />
+        android:minHeight="38dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp">
+
+            <View
+                android:id="@+id/peep_online_indicator"
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                tools:background="@drawable/peep_indicator_stale" />
+
+            <com.novoda.support.FontTextView
+                android:id="@+id/peep_text_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="6dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                app:textFont="montserratRegular"
+                tools:text="Master O" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </merge>
