--- a/android/mobile/src/main/res/layout/merge_selfie_preview.xml
+++ b/android/mobile/src/main/res/layout/merge_selfie_preview.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="24dp"
+        android:paddingBottom="24dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="horizontal">
 
         <com.novoda.support.FloatingActionButton
