--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -18,10 +18,20 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.novoda.peepz.PeepzContentView
-        android:id="@+id/peepz_content"
+    <com.novoda.peepz.PeepzCameraView
+        android:id="@+id/peepz_secret_camera"
+        android:layout_width="1dp"
+        android:layout_height="1dp" />
+
+    <com.novoda.peepz.PeepzView
+        android:id="@+id/peepz"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="104dp"
+        android:paddingLeft="@dimen/grid_spacing"
+        android:paddingRight="@dimen/grid_spacing"
+        android:paddingTop="@dimen/grid_spacing"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.novoda.support.FloatingActionButton
