Add signout to menu

--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -14,7 +14,8 @@
 
         <com.novoda.peepz.PeepzToolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:theme="@style/PeepzApp.Toolbar.Theme" />
 
     </android.support.design.widget.AppBarLayout>
 
