--- a/android/mobile/src/main/res/menu/peepz.xml
+++ b/android/mobile/src/main/res/menu/peepz.xml
@@ -8,4 +8,9 @@
         android:icon="@drawable/ic_camera_purple"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/peepz_menu_sign_out"
+        android:title="@string/peepz_menu_sign_out"
+        app:showAsAction="never" />
+
 </menu>
