--- a/android/mobile/src/main/res/drawable/peep_indicator_idle.xml
+++ b/android/mobile/src/main/res/drawable/peep_indicator_idle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/blue" />
+    <solid android:color="@color/orange" />
 
     <stroke
       android:width="1dp"
