--- a/android/mobile/src/main/res/values/color-palette.xml
+++ b/android/mobile/src/main/res/values/color-palette.xml
@@ -11,5 +11,7 @@
     <color name="purple_accent">#3A1885</color>
     <color name="gray_text">#757575</color>
     <color name="purple_text">@color/purple_accent</color>
+    <color name="blue">@android:color/holo_blue_dark</color>
+    <color name="orange">@android:color/holo_orange_light</color>
 
 </resources>
