--- a/android/mobile/src/main/res/values/attrs_font_text_view.xml
+++ b/android/mobile/src/main/res/values/attrs_font_text_view.xml
@@ -5,6 +5,8 @@
     <attr name="textFont" format="enum">
       <enum name="none" value="-1" />
       <enum name="montserratRegular" value="0" />
+      <enum name="montserratBold" value="1" />
+      <enum name="montserratMedium" value="2" />
     </attr>
   </declare-styleable>
 
