--- a/android/mobile/src/main/res/layout/merge_radio_button.xml
+++ b/android/mobile/src/main/res/layout/merge_radio_button.xml
@@ -7,7 +7,7 @@
     tools:layout_marginTop="100dp"
     tools:parentTag="LinearLayout">
 
-    <ImageView
+    <FrameLayout
         android:id="@+id/radio_button_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
