--- a/android/mobile/src/main/res/layout/merge_settings_dialog_widget.xml
+++ b/android/mobile/src/main/res/layout/merge_settings_dialog_widget.xml
@@ -14,14 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingTop="32dp"
-        android:paddingRight="24dp">
+        android:paddingTop="32dp">
 
         <com.novoda.support.FontTextView
             style="@style/PeepzApp.Settings.Dialog.Heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:text="@string/settings_dialog_timer_heading" />
 
         <com.novoda.peepz.RadioButtonWidget
