--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -24,6 +24,9 @@
 
     <style name="PeepzApp.RadioButtonWidget">
         <item name="android:minHeight">48dp</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+        <item name="android:foreground">@drawable/radio_button_widget_foreground</item>
     </style>
 
     <style name="PeepzApp.Toolbar.Theme" parent="Theme.AppCompat.Light">
