Add offline filter for peepz

--- a/android/mobile/src/main/res/values/attrs.xml
+++ b/android/mobile/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <attr name="peepzToolbarDefStyle" format="reference" />
     <attr name="radioButtonWidgetDefStyle" format="reference" />
+    <attr name="switchWidgetDefStyle" format="reference" />
 
     <attr name="floatingActionButtonDefStyle" format="reference" />
 
@@ -11,6 +12,10 @@
     </declare-styleable>
 
     <declare-styleable name="RadioButtonWidget">
+        <attr name="android:text" />
+    </declare-styleable>
+
+    <declare-styleable name="SwitchWidget">
         <attr name="android:text" />
     </declare-styleable>
 
