--- a/android/mobile/src/main/res/values/styles.xml
+++ b/android/mobile/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="peepzToolbarDefStyle">@style/PeepzApp.Toolbar</item>
         <item name="radioButtonWidgetDefStyle">@style/PeepzApp.RadioButtonWidget</item>
+        <item name="switchWidgetDefStyle">@style/PeepzApp.SwitchWidget</item>
         <item name="alertDialogTheme">@style/Theme.AppCompat.Light.Dialog.Alert</item>
         <item name="floatingActionButtonDefStyle">@style/PeepzApp.FloatingActionButton</item>
         <item name="actionMenuTextColor">@color/purple_text</item>
@@ -26,7 +27,14 @@
         <item name="android:minHeight">48dp</item>
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
-        <item name="android:foreground">@drawable/radio_button_widget_foreground</item>
+        <item name="android:foreground">@drawable/clickable_widget_foreground</item>
+    </style>
+
+    <style name="PeepzApp.SwitchWidget">
+        <item name="android:minHeight">48dp</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+        <item name="android:foreground">@drawable/clickable_widget_foreground</item>
     </style>
 
     <style name="PeepzApp.Toolbar.Theme" parent="Theme.AppCompat.Light">
