--- a/android/mobile/src/main/res/layout/merge_settings_dialog_widget.xml
+++ b/android/mobile/src/main/res/layout/merge_settings_dialog_widget.xml
@@ -43,6 +43,21 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_dialog_timer_off" />
 
+        <com.novoda.support.FontTextView
+            style="@style/PeepzApp.Settings.Dialog.Heading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:text="@string/settings_dialog_filters_heading" />
+
+        <com.novoda.peepz.SwitchWidget
+            android:id="@+id/settings_dialog_switch_filter_offline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/settings_dialog_filter_offline" />
+
     </LinearLayout>
 
     <LinearLayout
