--- a/android/mobile/src/main/res/layout/merge_switch.xml
+++ b/android/mobile/src/main/res/layout/merge_switch.xml
@@ -7,23 +7,24 @@
     tools:layout_marginTop="100dp"
     tools:parentTag="LinearLayout">
 
-    <FrameLayout
-        android:id="@+id/radio_button_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/ic_radio"
-        android:duplicateParentState="true" />
-
     <com.novoda.support.FontTextView
-        android:id="@+id/radio_button_text_label"
-        android:layout_width="match_parent"
+        android:id="@+id/switch_text_label"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="100"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:maxLines="1"
         android:textColor="@color/black"
         app:textFont="montserratRegular"
         tools:text="2 minutes" />
+
+    <FrameLayout
+        android:id="@+id/switch_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/ic_switch"
+        android:duplicateParentState="true" />
 
 </merge>
