--- a/android/mobile/src/main/res/layout/activity_peepz.xml
+++ b/android/mobile/src/main/res/layout/activity_peepz.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
         <com.novoda.peepz.PeepzToolbar
+            android:id="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/PeepzApp.Toolbar.Theme" />
